@@ -1,5 +1,15 @@
 2017-03-22  JF Bastien  <jfbastien@apple.com>
 
+        WebAssembly: test module namespace object for WebAssembly.Instance
+        https://bugs.webkit.org/show_bug.cgi?id=169951
+
+        Reviewed by Saam Barati.
+
+        * wasm/js-api/test_basic_api.js:
+        (const.c.in.constructorProperties.switch):
+
+2017-03-22  JF Bastien  <jfbastien@apple.com>
+
         WebAssembly: constructors without new don't throw
         https://bugs.webkit.org/show_bug.cgi?id=165995
 
